--- a/style.css
+++ b/style.css
@@ -1,16 +1,13 @@
-/* Include the padding and border in an element's total width and height */
 * {
     box-sizing: border-box;
     font-family: sans-serif;
 }
 
-/* Remove margins and padding from the list */
 ul {
     margin: 0;
     padding: 0;
 }
 
-/* Style the list items */
 ul li {
     cursor: pointer;
     position: relative;
@@ -19,31 +16,25 @@ ul li {
     font-size: 18px;
     transition: 0.2s;
 
-    /* make the list items unselectable */
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
 }
 
-/* Set all odd list items to a different color (zebra-stripes) */
 ul li:nth-child(odd) {
     background: #f9f9f9;
 }
 
-/* Darker background-color on hover */
 ul li:hover {
     background: #ddd;
 }
 
-/* When clicked on, add a background color and strike out text */
 ul li.checked {
     background: #888;
     color: #fff;
-    text-decoration: line-through;
 }
 
-/* Add a "checked" mark when clicked on */
 ul li.checked::before {
     content: '';
     position: absolute;
@@ -57,7 +48,19 @@ ul li.checked::before {
     width: 7px;
 }
 
-/* Style the close button */
+ul li.checked div {
+    text-decoration: line-through;
+}
+
+.todoTitleDiv { width: 70%;
+    float: left;
+}
+
+.todoTimestampDiv {
+    width: 30%;
+    float: left;
+}
+
 .close {
     position: absolute;
     right: 0;
@@ -70,7 +73,6 @@ ul li.checked::before {
     color: white;
 }
 
-/* Style the header */
 .header {
     background-color: #14a7f4;
     padding: 30px 40px;
@@ -78,14 +80,12 @@ ul li.checked::before {
     text-align: center;
 }
 
-/* Clear floats after the header */
 .header:after {
     content: "";
     display: table;
     clear: both;
 }
 
-/* Style the input */
 input {
     margin: 0;
     border: none;
@@ -96,7 +96,6 @@ input {
     font-size: 16px;
 }
 
-/* Style the "Add" button */
 .addBtn {
     padding: 10px;
     width: 25%;
@@ -112,4 +111,8 @@ input {
 
 .addBtn:hover {
     background-color: #bbb;
+}
+
+.title {
+    margin-bottom: 20px;
 }
