--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ ul li.checked div {
 }
 
 .header {
-    background-color: #14a7f4;
+    background-color: black;
     padding: 30px 40px;
     color: white;
     text-align: center;
